--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 <body>
     <div class="container">
+
         <img class="image-nft" src="images/image-equilibrium.jpg" alt="Equvilibrium">
         <h2>
-            Equilibrium #3429
+            <a href="#">Equilibrium #3429</a>
         </h2>
         <p class="description">
 
@@ -34,10 +35,11 @@
             </div>
         </div>
         <div class="author">
-
-            Creation of Jules Wyvern
+            <img class="avatar" src="images/image-avatar.png" alt="Profile picture of Jules Wyvern">
+            <span>Creation of <a href='#'>Jules Wyvern</a></span>
         </div>
     </div>
+
 
 </body>
 
