Add overlay effect

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body>
     <div class="container">
+        <div class="image-container">
 
-        <img class="image-nft" src="images/image-equilibrium.jpg" alt="Equvilibrium">
+            <img class="image-nft" src="images/image-equilibrium.jpg" alt="Equvilibrium">
+        </div>
         <h2>
             <a href="#">Equilibrium #3429</a>
         </h2>
